--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.kotrt</groupId>
-    <artifactId>kotrt</artifactId>
+    <artifactId>maillist</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <name>kotrt</name>
