1. 第一个版本提交

--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,18 @@
     <name>kotrt</name>
     <description>邮件列表服务</description>
 
-
     <properties></properties>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+
+
+    </dependencies>
 
     <build>
         <plugins>
