refactor: dkim 处理，当前还是存在问题，可能是配置的原因

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,19 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>http://repo1.maven.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>milton</id>
+            <name>Milton Central</name>
+            <url>https://dl.bintray.com/milton/Milton/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
         <dependency>
