--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,16 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.12.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/dkim-for-java-mail/dkim-for-java-mail -->
         <dependency>
-            <groupId>dkim-for-java-mail</groupId>
-            <artifactId>dkim-for-java-mail</artifactId>
-            <version>1.3</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.1.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
         </dependency>
 
     </dependencies>
