--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,15 @@
             <version>2.12.1</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>5.1.5.RELEASE</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
         </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.springframework</groupId>-->
+        <!--    <artifactId>spring-core</artifactId>-->
+        <!--    <version>5.1.5.RELEASE</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>commons-io</groupId>
