--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.kotrt</groupId>
     <artifactId>maillist</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.1.0</version>
 
     <name>kotrt</name>
     <description>邮件列表服务</description>
